--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
