--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "index.js",
+        "src": "main.jsx",
         "use": "@vercel/node"
       },
       {
@@ -10,18 +10,6 @@
       }
     ],
     "routes": [
-      {
-        "src": "/products",
-        "dest": "index.js"
-      },
-      {
-        "src": "/products/(.*)",
-        "dest": "index.js"
-      },
-      {
-        "src": "/add",
-        "dest": "dist/index.html"
-      },
       {
         "src": "/",
         "dest": "dist/index.html"
