--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,5 @@
 {
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "dist/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/products",
-        "dest": "index.js"
-      },
-      {
-        "src": "/products/(.*)",
-        "dest": "index.js"
-      },
-      {
-        "src": "/add",
-        "dest": "dist/index.html"
-      },
-      {
-        "src": "/",
-        "dest": "dist/index.html"
-      },
-      {
-        "src": "/(.+)",
-        "dest": "dist/$1"
-      }
+    "rewrites":  [
+      {"source": "/(.*)", "destination": "/"}
     ]
   }
